5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1807_2563.log
== TEST (2019-06-04 20:15:15) 
-- CODE:
from numpy import *
medias = array(eval("Digite as notas dos estudantes: "))

mon = 0
aprovado = 0
for nota in medias:
	if(nota >= 5):
		aprovado = aprovado+1
		if(nota >= 7):
			mon = mon+1
	medias = array(eval("Digite as notas dos estudantes: "))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:15:46) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

mon = 0
aprovado = 0
for nota in medias:
	if(nota >= 5):
		aprovado = aprovado+1
		if(nota >= 7):
			mon = mon+1
	medias = array(eval("Digite as notas dos estudantes: "))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:17:48) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

mon = 0
aprovado = 0
for nota in medias:
	if(nota >= 5):
		aprovado = aprovado+1
		if(nota >= 7):
			mon = mon+1
	print(aprovado-mon)
	
	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:19:08) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

for nota in medias:
	mon = 0
	aprovado = 0
	if(nota >= 5):
		aprovado = aprovado + 1
		if(nota >= 7):
			mon = mon+1
	print(aprovado-mon)
	
	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:20:19) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

for nota in medias:
	mon = 0
	aprovado = 0
	if(nota >= 5):
		aprovado = aprovado + 1
		if(nota >= 7):
			mon = mon+1
	print(aprovado)
	print(media)
	print(mone)
	
	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:20:36) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

for nota in medias:
	mon = 0
	aprovado = 0
	if(nota >= 5):
		aprovado = aprovado + 1
		if(nota >= 7):
			mon = mon+1
	print(aprovado)
	print(medias)
	print(mone)
	
	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:20:52) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

for nota in medias:
	mon = 0
	aprovado = 0
	if(nota >= 5):
		aprovado = aprovado + 1
		if(nota >= 7):
			mon = mon+1
	print(aprovado)
	print(medias)
	print(mon)
	
	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:22:09) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

for nota in medias:
	if(nota >= 5):
		aprovado = 0
		aprovado = aprovado + 1
		if(nota >= 7):
			mon = 0
			mon = mon+1
	print(aprovado)
	print(medias)
	print(mon)
	
	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:24:02) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))
while(medias >= 0)
aprovado = 0
mon = 0
	for nota in medias:
		if(nota >= 5):
			aprovado = aprovado + 1		
		if(nota >= 7):
			mon = mon+1
	print(aprovado)
	print(mon)
	
	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- ERROR:
File "XXXX", line 3
    while(medias >= 0)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:24:13) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))
while(medias >= 0):
aprovado = 0
mon = 0
	for nota in medias:
		if(nota >= 5):
			aprovado = aprovado + 1		
		if(nota >= 7):
			mon = mon+1
	print(aprovado)
	print(mon)
	
	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- ERROR:
File "XXXX", line 4
    aprovado = 0
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:25:10) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

while(medias >= 0):
	aprovado = 0
	mon = 0
	
	for nota in medias:
		if(nota >= 5):
			aprovado = aprovado + 1		
		if(nota >= 7):
			mon = mon+1
	print(aprovado)
	print(mon)
	
	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:26:01) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

while(size(medias) > 1):
	aprovado = 0
	mon = 0
	
	for nota in medias:
		if(nota >= 5):
			aprovado = aprovado + 1		
		if(nota >= 7):
			mon = mon+1
	print(aprovado)
	print(mon)
	
	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 20:26:20) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

while(size(medias) > 1):
	aprovado = 0
	mon = 0
	
	for nota in medias:
		if(nota >= 5):
			aprovado = aprovado + 1		
		if(nota >= 7):
			mon = mon+1
	print(aprovado)
	print(mon)
	
	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- EXECUTION TIME:
1.15893
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
4
4
7
4
3
2
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
0
5
1
9
8
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
8
3
6
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:26:40) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

while(size(medias) > 1):
	aprovado = 0
	mon = 0
	for nota in medias:
		if(nota >= 5):
			aprovado = aprovado + 1		
		if(nota >= 7):
			mon = mon+1
	print(aprovado)
	print(mon)
	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:27:07) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

while(size(medias) > 1):
	aprovado = 0
	mon = 0
	for nota in medias:
		if(nota >= 5):
			aprovado = aprovado + 1		
		if(nota >= 7):
			mon = mon+1
	print(aprovado-mon)

	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 20:27:38) 
-- CODE:
from numpy import *
medias = array(eval(input("Digite as notas dos estudantes: ")))

while(size(medias) > 1):
	aprovado = 0
	mon = 0
	for nota in medias:
		if(nota >= 5):
			aprovado = aprovado + 1		
		if(nota >= 7):
			mon = mon+1
	print(aprovado-mon)

	medias = array(eval(input("Digite as notas dos estudantes: ")))		
		
-- EXECUTION TIME:
1.24287
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
